# webqa

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config.json  main.cpp  server.crt  server.csr  server.key
controller/: akuncontroller.cpp  akuncontroller.hpp  basecontroller.cpp  basecontroller.hpp  bukucontroller.cpp  bukucontroller.hpp  bukucontroller.hpp.autosave  donasicontroller.cpp  donasicontroller.cpp.autosave  donasicontroller.hpp  donasicontroller.hpp.autosave  jenistransaksicontroller.cpp  jenistransaksicontroller.hpp  menucontroller.cpp  menucontroller.hpp  muhsinincontroller.cpp  muhsinincontroller.h  transaksicontroller.cpp  transaksicontroller.hpp
db/: akunprocess.cpp  akunprocess.hpp  baseprocess.cpp  baseprocess.hpp  bukuprocess.cpp  bukuprocess.hpp  dbprocess.cpp  dbprocess.hpp  donasi_model.hpp  donasiprocess.cpp  donasiprocess.hpp  interfaceprocess.hpp  jenistransaksiprocess.cpp  jenistransaksiprocess.hpp  menuprocess.cpp  menuprocess.hpp  muhsininprocess.hpp
models/: absmodel.cpp  absmodel.hpp  akun.cpp  akun.hpp  buku.cpp  buku.hpp  bukujenistransaksi.cpp  bukujenistransaksi.hpp  header.cpp  header.hpp  hitbase.cpp  hitbase.hpp  jenistransaksi.cpp  jenistransaksi.hpp  menu.cpp  menu.hpp  muhsinin.cpp  muhsinin.hpp  pelaksana.cpp  pelaksana.hpp  rekap.cpp  rekap.hpp  response.cpp  response.hpp  sumberdana.cpp  sumberdana.hpp  users.cpp  users.hpp
scripts/: websocket.js
utils/: corsfilter.cpp  corsfilter.hpp  jsonconverter.cpp  jsonconverter.hpp  money.h  money.hpp  mystack.cpp  mystack.hpp  sessionfilter.cpp  sessionfilter.hpp  utils.cpp  utils.hpp  verifheader.cpp  verifheader.hpp
views/: dashboard.csp  tampil.csp
